[tool.poetry]
name = "fourdimensions"
version = "0.1.0"
description = ""
authors = ["saveweb <saveweb@save-web.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pycryptodome = "^3.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
